Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* mercurial+ sync prefix is now supported for hg.

* FEATURES='strip nostrip splitdebug' are now supported in portage
  configuration (trigger is pkgcore.merge.triggers.BinaryDebug).

* triggers _priority class var is now priority; overload with a property if
  custom functionality is needed.


pkgcore 0.4.6: April 29, 2008

* filelist sets (world file for example) are now sorted by atom comparison
  rules.  ticket #178.

* pquery --restrict-revdep-pkgs and --revdep-pkgs were added: they're
  used to first match against possible pkgs, then do the revdep looking for
  pkgs that revdep upon those specific versions.  Functionality may change,
  as may the outputting of it.  ticket #179.

* pebuild breakage introduced in 11/07 is corrected; back to working.

* 'info' messages during merging are now displayed by default- new debug
  message type was added that isn't displayed by default.

* ebuild domain now accepts triggers configuration directive.

* FEATURES=unmerge-buildpkg was added; this effectively quickpkgs a pkg
  before it's unmerged so you have a snapshot of it's last state before
  it is replaced.

* FEATURES=pristine-buildpkg was added; this is like FEATURES=buildpkg,
  but tbzs the pkg prior to any modification by triggers.  Upshot of this,
  you basically have an unmodified binpkg that can be localized to the merging
  host rather then to the builder.  Simple example, with this if your main
  system is FEATURES=strip, it tucks away a nonstripped binpkg- so that
  consumers of the binary repo are able to have debug symbols if they want
  them.

* FEATURES=buildsyspkg is now supported.

* FEATURES=buildpkg is now supported.

* the engine used for install/uninstall/replace is now configurable via 
  engine_kls attribute on the op class.

* dropped exporting of USER='portage' if id is portage.  Ancient var setting,